--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(calcium3d)
+project(CshaderEngine)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -26,25 +26,25 @@ set(SOURCES
 )
 
 # Create executable
-add_executable(calcium3d ${SOURCES})
+add_executable(CshaderEngine ${SOURCES})
 
 # Link libraries
-target_link_libraries(calcium3d
+target_link_libraries(CshaderEngine
     ${OPENGL_LIBRARIES}
     ${GLFW_LIBRARIES}
     ${GLEW_LIBRARIES}
 )
 
 # Include pkg-config flags (in case needed)
-target_include_directories(calcium3d PRIVATE
+target_include_directories(CshaderEngine PRIVATE
     ${GLFW_INCLUDE_DIRS}
     ${GLEW_INCLUDE_DIRS}
 )
 
-target_link_directories(calcium3d PRIVATE
+target_link_directories(CshaderEngine PRIVATE
     ${GLFW_LIBRARY_DIRS}
     ${GLEW_LIBRARY_DIRS}
 )
 
 # Optional: enable compiler warnings
-target_compile_options(calcium3d PRIVATE -Wall -Wextra -pedantic)
+target_compile_options(CshaderEngine PRIVATE -Wall -Wextra -pedantic)
